updates to files
bug fixes, enhancements to ux/ui

--- a/Wray_Tracker/Views/Account/DemoLogin.cshtml
+++ b/Wray_Tracker/Views/Account/DemoLogin.cshtml
@@ -142,10 +142,10 @@
 
                 }
                 <p class="mb-1">
-                    <a href="@Url.Action("Login", "Account")" class="text-center">I already have a membership</a>
+                    <a href="@Url.Action("Login", "Account")" class="text-center">Already have an account</a>
                 </p>
                 <p class="mb-0">
-                    <a href="@Url.Action("Register", "Account")" class="text-center">Register a new membership</a>
+                    <a href="@Url.Action("Register", "Account")" class="text-center">Register a new account</a>
                 </p>
             </div>
             <!-- /.login-card-body -->
