--- a/Wray_Tracker/Views/Account/ForgotPassword.cshtml
+++ b/Wray_Tracker/Views/Account/ForgotPassword.cshtml
@@ -57,10 +57,10 @@
                 }
 
                 <p class="mt-3 mb-1">
-                    <a href="@Url.Action("Login", "Account")">Login</a>
+                    <a href="@Url.Action("Login", "Account")">Login to account</a>
                 </p>
                 <p class="mb-0">
-                    <a href="@Url.Action("Register", "Account")" class="text-center">Register a new membership</a>
+                    <a href="@Url.Action("Register", "Account")" class="text-center">Register a new account</a>
                 </p>
             </div>
             <!-- /.login-card-body -->
