update to files
bug fixes, ui/ux enhancements

--- a/Wray_Tracker/Views/Home/EditProfile.cshtml
+++ b/Wray_Tracker/Views/Home/EditProfile.cshtml
@@ -9,7 +9,7 @@
                     <div class="mx-3 mt-n2 elevation-2 bg-gradient-navy text-white">
                         <h5 class="mx-3 mt-2 mb-0">Edit User Profile</h5>
                         <p class="text-sm mx-sm-4">
-                            @Html.ActionLink("Change Password", "ChangePassword", "Manage", new { @class = "text-white"}) |
+                            @Html.ActionLink("Change Password", "ChangePassword", "Manage", null, new { @class = "text-white"}) |
                             @Html.ActionLink("Back to Profile", "About", null, new { @class = "text-white" })
                         </p>
                     </div>
