--- a/Wray_Tracker/Views/Tickets/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Tickets/Dashboard.cshtml
@@ -2,11 +2,11 @@
 @using Wray_Tracker.ViewModels
 @model Ticket
 
-
+<div class="content-header"></div>
 
 <!-- Main content -->
-<section class="content-header">
-    <div class="container mt-2">
+<section class="content">
+    <div class="container-fluid mt-1">
         <div class="row">
             <div class="col">
                 <!-- Default box -->
