--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -9,17 +9,11 @@
             <div class="col-sm-6">
                 <h3 class="m-0 text-gray">Logged in as: @Model.RoleNames</h3>
             </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
-            </div><!-- /.col -->
         </div><!-- /.row -->
     </div><!-- /.container-fluid -->
 </div>
-<!-- /.content-header -->
-@* Admin will get to see everything *@
+
+<!-- Admin will get to see everything -->
 @if (User.IsInRole("Admin"))
 {
     <!-- Main content -->
@@ -555,7 +549,7 @@
 
 }
 
-<!--View for Submitter and Developer -->
+<!-- View for Submitter and Developer -->
 @if (User.IsInRole("Submitter") || User.IsInRole("Developer"))
 {
 
@@ -751,6 +745,10 @@
         </div>
     </section>
 }
+
+
+
+<!-- Script for Sweet Alert -->
 @section scripts {
     <script>
         var unAuthorizedTicketAccess = '@TempData["UnAuthorizedTicketAccess"]';
