--- a/Wray_Tracker/Views/Manage/ChangePassword.cshtml
+++ b/Wray_Tracker/Views/Manage/ChangePassword.cshtml
@@ -1,45 +1,44 @@
 ﻿@model Wray_Tracker.Models.ChangePasswordViewModel
-@{
-    ViewBag.Title = "Change Password";
-}
 
-<h2>@ViewBag.Title</h2>
+<section class="content-header">
+    <div class="container mt-2">
+        <div class="row">
+            <div class="col">
+                @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal card card-info", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="card-header">
+                        <h4 class="card-title">Change Password Form</h4>
+                    </div>
+                    <div class="card-body">
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Change password" class="btn btn-default" />
+                            </div>
+                        </div>
+                    </div>
+                }
 
-
-    @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal card card-info", role = "form" }))
-    {
-            @Html.AntiForgeryToken()
-        <div class="card-header">
-            <h4 class="card-title">Change Password Form</h4>
+            </div>
         </div>
-        <div class="card-body">
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Change password" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    </div>
+</section>
