--- a/Wray_Tracker/Views/Tickets/Create.cshtml
+++ b/Wray_Tracker/Views/Tickets/Create.cshtml
@@ -2,7 +2,7 @@
 
 
 <section class="content">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col mt-4">
                 <div class="card">
