--- a/Wray_Tracker/Views/TicketHistories/Index.cshtml
+++ b/Wray_Tracker/Views/TicketHistories/Index.cshtml
@@ -2,10 +2,14 @@
 @using Wray_Tracker.Helper;
 @model IEnumerable<TicketHistory>
 
+    <div class="content-header">
+        <div class="container-fluid">
 
+        </div>
+    </div>
 
 <section class="content">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col mt-4">
                 <div class="card">
