--- a/Wray_Tracker/Views/Home/About.cshtml
+++ b/Wray_Tracker/Views/Home/About.cshtml
@@ -12,12 +12,6 @@
                     <h1><strong>@Model.FirstName's Profile</strong></h1>
                 }
             </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="@Url.Action("Dashboard", "Home")">Home</a></li>
-                    <li class="breadcrumb-item active">User Profile</li>
-                </ol>
-            </div>
         </div>
     </div><!-- /.container-fluid -->
 </section>
@@ -25,7 +19,7 @@
 <section class="content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col">
+            <div class="col-6">
                 <!-- Profile Image -->
                 <div class="card card-navy card-outline">
                     <div class="card-body box-profile">
