--- a/Wray_Tracker/Views/Projects/Edit.cshtml
+++ b/Wray_Tracker/Views/Projects/Edit.cshtml
@@ -1,7 +1,13 @@
 ﻿@model Wray_Tracker.Models.Project
 
+    <div class="content-header">
+        <div class="container-fluid">
+
+        </div>
+    </div>
+
 <section class="content">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col mt-4">
                 <div class="card">
