--- a/Wray_Tracker/Views/Projects/ProjectDetails.cshtml
+++ b/Wray_Tracker/Views/Projects/ProjectDetails.cshtml
@@ -9,9 +9,15 @@
 
 }
 
+<div class="content-header">
+    <div class="container-fluid">
+
+    </div>
+</div>
+
 <!-- Main content -->
-<section class="content-header">
-    <div class="container mt-2">
+<section class="content">
+    <div class="container-fluid mt-2">
         <div class="row">
             <div class="col">
                 <!-- Default box -->
