--- a/Wray_Tracker/Views/TicketNotifications/Index.cshtml
+++ b/Wray_Tracker/Views/TicketNotifications/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@model IEnumerable<Wray_Tracker.Models.TicketNotification>
 
+    <div class="content-header">
+        <div class="container-fluid">
 
+        </div>
+    </div>
 
 <section class="content">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col mt-4">
                 <div class="card">
