--- a/Wray_Tracker/Views/Tickets/Create.cshtml
+++ b/Wray_Tracker/Views/Tickets/Create.cshtml
@@ -1,5 +1,10 @@
 ﻿@model Wray_Tracker.Models.Ticket
 
+    <div class="content-header">
+        <div class="container-fluid">
+
+        </div>
+    </div>
 
 <section class="content">
     <div class="container-fluid">
@@ -64,22 +69,6 @@
                                     </div>
                                 </div>
 
-                                @*<div class="form-group">
-                                        @Html.LabelFor(model => model.SubmitterId, "SubmitterId", htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
-                                            @Html.DropDownList("SubmitterId", null, htmlAttributes: new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(model => model.SubmitterId, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        @Html.LabelFor(model => model.DeveloperId, "DeveloperId", htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
-                                            @Html.DropDownList("DeveloperId", null, htmlAttributes: new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(model => model.DeveloperId, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>*@
-
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
@@ -96,35 +85,9 @@
                                     </div>
                                 </div>
 
-                                @*<div class="form-group">
-                                        @Html.LabelFor(model => model.Created, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
-                                            @Html.EditorFor(model => model.Created, new { htmlAttributes = new { @class = "form-control" } })
-                                            @Html.ValidationMessageFor(model => model.Created, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        @Html.LabelFor(model => model.Updated, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
-                                            @Html.EditorFor(model => model.Updated, new { htmlAttributes = new { @class = "form-control" } })
-                                            @Html.ValidationMessageFor(model => model.Updated, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>*@
-
-                                @*<div class="form-group">
-                                        @Html.LabelFor(model => model.IsArchived, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
-                                            <div class="checkbox">
-                                                @Html.EditorFor(model => model.IsArchived)
-                                                @Html.ValidationMessageFor(model => model.IsArchived, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
-                                    </div>*@
-
                                 <div class="form-group">
                                     <div class="col-md-offset-2 col-md-10">
-                                        <input type="submit" value="Create" class="btn btn-default" />
+                                        <input type="submit" value="Create" class="btn bg-gradient-orange text-white" />
                                     </div>
                                 </div>
                             </div>
