--- a/Wray_Tracker/Views/Tickets/Edit.cshtml
+++ b/Wray_Tracker/Views/Tickets/Edit.cshtml
@@ -2,8 +2,14 @@
 @model Wray_Tracker.Models.Ticket
 
 
+    <div class="content-header">
+        <div class="container-fluid">
+
+        </div>
+    </div>
+
 <section class="content">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col mt-4">
                 <div class="card">
