--- a/Wray_Tracker/Views/Tickets/Index.cshtml
+++ b/Wray_Tracker/Views/Tickets/Index.cshtml
@@ -7,8 +7,15 @@
 
     var colorHelper = new ColorHelper();
 }
+
+    <div class="content-header">
+        <div class="container-fluid">
+
+        </div>
+    </div>
+
 <section class="content">
-    <div class="container">
+    <div class="container-fluid">
         @if (User.IsInRole("Submitter"))
         {
             <div class="row">
